--- a/.github/workflows/pubulish-electron.yml
+++ b/.github/workflows/pubulish-electron.yml
@@ -2,7 +2,7 @@ name: "pubulish-electron"
 on:
   push:
     tags:
-      - "v*" # 推送事件匹配 v*, 例如 v1.0，v20.15.10 等来触发工作流
+      - "v1.0" # 推送事件匹配 v*, 例如 v1.0，v20.15.10 等来触发工作流
 jobs:
   release:
     name: build and release electron app
